<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Lectures.TimeRegistLectureFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_my_timetable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/regist_lecture_cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_lecture_cancel"
            app:layout_constraintStart_toStartOf="@id/title_tv"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            android:textColor="@android:color/holo_red_dark"/>

        <TextView
            android:id="@+id/finish_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/regist_lecture_cancel_tv"
            app:layout_constraintBottom_toBottomOf="@id/regist_lecture_cancel_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/finish"/>

        <com.islandparadise14.mintable.MinTimeTableView
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regist_lecture_cancel_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>