<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Lectures.ContentRegistLectureFragment">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lecture_regist"/>
    
    <ImageView
        android:id="@+id/close_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/title_tv"
        app:layout_constraintBottom_toBottomOf="@id/title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/icon_close"/>

    <TextView
        android:id="@+id/lecture_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lecture_name"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/title_tv"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lecture_name_input_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/lecture_name_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lecture_name_input_tf"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lecture_category_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lecture_category"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/lecture_name_input_til"/>

    <HorizontalScrollView
        android:id="@+id/lecture_category_hsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/lecture_category_tv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/lecture_category_tv"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/lecture_category_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toTopOf="@id/lecture_name_tv"
            app:layout_constraintBottom_toBottomOf="@id/lecture_professor_tv"
            app:layout_constraintEnd_toStartOf="@id/lecture_count_tv"
            android:backgroundTint="#D5F35C"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="아르바이트"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp" />

        </androidx.cardview.widget.CardView>
        
    </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/lecture_mini_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lecture_mini_content"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/lecture_category_hsv"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lecture_mini_content_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/lecture_mini_content_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lecture_mini_content_tf"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lecture_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lecture_content"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/lecture_mini_content_til"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lecture_content_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:layout_constraintStart_toStartOf="@id/title_tv"
        app:layout_constraintTop_toBottomOf="@id/lecture_content_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lecture_content_tf"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/regist_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lecture_content_til"/>

</androidx.constraintlayout.widget.ConstraintLayout>